# redmine-mcp-server

./: .env.docker  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml  roadmap.md  server.json
.github/workflows/: dependency-audit.yml  deploy-demo.yml  lock-closed-issues.yml  pr-tests.yml  publish-pypi.yml  remove-autoclose-label.yml  stale-issue-manager.yml
deployment/agentcore/: .env.agentcore.example  Dockerfile.agentcore  README.md  cleanup.sh  deploy.sh  docker-compose.agentcore.yml
docs/: contributing.md  legacy-per-user-auth.md  oauth-setup.md  roadmap.md  tool-reference.md  troubleshooting.md
examples/: README.md  daily-standup.md  health-check.md  issue-triage.md  release-notes.md  sprint-planning.md
pages/: CNAME  index.html
scripts/: audit.sh  release.py
src/redmine_mcp_server/: __init__.py  _auth.py  _cleanup.py  _client.py  _custom_fields.py  _decorators.py  _env.py  _errors.py  _http_routes.py  _mount.py  _oauth_proxy.py  _per_user.py  _scope_middleware.py  _serialization.py  _ssrf.py  _tool_error_middleware.py  _validation.py  agentcore_server.py  main.py  oauth_middleware.py  oauth_scopes.py  redmine_handler.py  redmine_tools.py  server.py
src/redmine_mcp_server/apps/: __init__.py  project_dashboard.py  triage_board.py
src/redmine_mcp_server/apps/_ui/: project_dashboard.html  triage_board.html
src/redmine_mcp_server/tools/: __init__.py  checklists.py  contacts.py  documents.py  enumeration.py  files.py  gantt.py  issues.py  meta.py  products.py  projects.py  search.py  time_tracking.py  wiki.py
tests/: conftest.py  run_tests.py  test_admin_tools_gating.py  test_agentcore_integration.py  test_agile_support.py  test_analyze_project_risks.py  test_attachment_shape_symmetry.py  test_auth_factory.py  test_checklist_support.py  test_cleanup_manager.py  test_client_token_access.py  test_configured_scopes.py  test_connection.py  test_content_url_rewriting.py  test_create_name_lookup.py  test_crm_support.py  test_custom_field_helpers.py  test_decorators.py  test_delete_redmine_issue.py  test_dmsf_support.py  test_enumeration_tools.py  test_enumerations.py  test_env_discovery_mode.py  test_env_loading.py  test_error_handling.py  test_file_manager.py  test_file_tools.py  test_gantt.py  test_global_search.py  test_health_probe.py  test_http_endpoints.py  test_integration.py  test_issue_to_dict_selective.py  test_issue_tracking_tools.py  test_issue_uploads.py  test_limit_offset_schema.py  test_list_error_envelope_consolidation.py  test_list_project_issue_custom_fields.py  test_list_project_trackers.py  test_list_redmine_issues.py  (+43 more)
tests/fixtures/: redmine_6_permissions.txt
tests/fixtures/ssl/: .gitignore  ca-cert.pem  ca-key.pem  client-cert.pem  client-combined.pem  client-csr.pem  client-key.pem  server-cert.pem  server-csr.pem  server-key.pem
