[project]
name = "redmine-mcp-server"
version = "2.4.0"
description = "MCP server that lets AI assistants manage Redmine issues, projects, wikis, and time tracking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["redmine", "mcp", "model-context-protocol", "project-management", "server"]
authors = [
    {name = "Kevin Tan", email = "6021013+jztan@users.noreply.github.com"}
]
maintainers = [
    {name = "Kevin Tan", email = "6021013+jztan@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Groupware",
]
dependencies = [
    "python-dotenv>=1.0.0,<2",
    "httpx>=0.27.0,<1",
    "fastmcp>=3.0.0,<4",
    "python-redmine>=2.5.0,<3",
    "starlette>=1.3.1,<2",
    "uvicorn>=0.24.0,<1",
    "python-multipart>=0.0.30,<1",
    "urllib3>=2.7.0,<3",
    "pyjwt[crypto]>=2.13.0,<3",
    "cryptography>=48.0.1,<50",
    "joserfc>=1.6.7,<2",
]

[project.urls]
Homepage = "https://github.com/jztan/redmine-mcp-server"
Repository = "https://github.com/jztan/redmine-mcp-server.git"
Issues = "https://github.com/jztan/redmine-mcp-server/issues"
Changelog = "https://github.com/jztan/redmine-mcp-server/blob/develop/CHANGELOG.md"

[project.scripts]
redmine-mcp-server = "redmine_mcp_server.main:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0,<10",
    "pytest-asyncio>=0.21.0,<2",
    "pytest-cov>=4.0.0,<8",
    "pytest-mock>=3.10.0,<4",
    "httpx>=0.28.1,<1",
]
dev = [
    "pytest>=7.0.0,<10",
    "pytest-asyncio>=0.21.0,<2",
    "pytest-cov>=4.0.0,<8",
    "pytest-mock>=3.10.0,<4",
    "httpx>=0.28.1,<1",
    "flake8>=6.0.0,<8",
    "black>=23.0.0,<27",
    "pre-commit>=3.0.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]